--- a/src/swiper_/navi_custom.scss
+++ b/src/swiper_/navi_custom.scss
@@ -1,18 +1,20 @@
+@import "../assets/mixins";
+
 .slide_btn_area {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 0 10px;
-	position: absolute;
-	top: 0;
-	left: 0;
+	z-index: 50;
+
+	@include posi(50%, 50%);
 
 	div {
 		transition: all 0.5s;
 		cursor: pointer;
 
 		&:hover {
-			background-color: antiquewhite;
+			background-color: rgb(60, 57, 53);
 			color: blue;
 		}
 	}
