+ 스와이퍼 슬라이드 커스텀 완료본

--- a/src/swiper_/SwiperBasic.scss
+++ b/src/swiper_/SwiperBasic.scss
@@ -6,6 +6,20 @@
 	justify-content: center;
 }
 
+.swiper-slide {
+	a {
+		display: block;
+		width: 100%;
+		height: 100%;
+
+		img {
+			display: block;
+			width: 100%;
+			height: 100%
+		}
+	}
+}
+
 .first_Swiper .swiper-slide {
 	@extend %sw-slide;
 }
